# BasicClock

./: CMakeLists.txt  README.md  compiledesktop.bat  compileweb.bat  deletetildes.bat  server.bat
src/: App.cpp  App.h  MainApp.cpp  MainApp.h  console.cpp  console.h  main.cpp
