cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
add_subdirectory(${CMAKE_SOURCE_DIR}/lib/raylib)
project(BasicClock)
file(GLOB basicclock_srcs ${CMAKE_SOURCE_DIR}/src/*.cpp)
add_executable(BasicClock ${basicclock_srcs})
target_link_libraries(BasicClock raylib)

